@@ -1,5 +1,12 @@
 2011-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/table.spad.pamphlet,
+	src/interp/scan.boot, src/interp/postpar.boot,
+	src/interp/compiler.boot, src/interp/br-op1.boot,
+	src/interp/vmlisp.lisp: Misc cleanups.
+
+2011-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/Makefile.in, src/interp/macros.lisp, 
 	src/interp/spad.lisp, src/interp/util.lisp: Smaller depsys.
 
